# FAM

./: .clang-format  .cmake-format.yaml  .dir-locals.el  CMakeLists.txt  LICENSE  README.md  TODO.txt  conanfile.py
.devcontainer/: Dockerfile  Dockerfile.remote  build.sh  run.sh
.github/workflows/: auto-clang-format.yml
cmake/: Cache.cmake
src/: CMakeLists.txt  main.cpp  server.cpp
src/FAM/: CMakeLists.txt  FAM_constants.hpp.in  FAM_rdma.cpp  FAM_rdma.hpp  client.cpp  server.cpp  util.cpp  util.hpp
src/FAM-Graph/fgidx/: CMakeLists.txt  fgidx.cpp
src/FAM-Graph/fgidx/include/: fgidx.hpp
src/FAM-Graph/include/: famgraph.hpp
src/FAM/include/: FAM.hpp  FAM_rdma.hpp  FAM_segment.hpp
src/FAM/rpc/: CMakeLists.txt  fam.proto  fam_client.cpp  fam_server.cpp
src/codec/: CMakeLists.txt  codec.cpp
src/codec/include/: codec.hpp
src/distributed/: CMakeLists.txt
src/distributed/include/: mpi_substrate.hpp
src/famgraph/: CMakeLists.txt  famgraph.cpp  graph.cpp
src/famgraph/fgidx/: CMakeLists.txt  fgidx.cpp
src/famgraph/fgidx/include/: fgidx.hpp
src/famgraph/include/: famgraph.hpp  nop_decompressor.hpp
src/graph_algs/: CMakeLists.txt
src/graph_algs/include/: NopSubstrate.hpp  famgraph_algorithms.hpp
test/: CMakeLists.txt  algorithm_tests.cpp  codec_tests.cpp  constants.hpp.in  distributed_tests.cpp  fgidxtests.cpp  graph_tests.cpp  tests.cpp
test/files/: fgidxtest1.idx
test/reference_output/: reference.hpp
test/test_graphs/Gnutella04/: p2p-Gnutella04.adj  p2p-Gnutella04.adj2  p2p-Gnutella04.idx  p2p-Gnutella04.idx2
test/test_graphs/Gnutella04-sym/: p2p-Gnutella04-sym.adj  p2p-Gnutella04-sym.adj2  p2p-Gnutella04-sym.idx  p2p-Gnutella04-sym.idx2  p2p-Gnutella04-sym.txt
test/test_graphs/last_vert_non_empty/: graph.adj  graph.adj2  graph.idx2
test/test_graphs/small/: small.adj  small.adj2  small.idx  small.idx2  small.txt
test/test_graphs/small-sym/: small-sym.adj  small-sym.adj2  small-sym.idx  small-sym.idx2  small-sym.txt
test/util/: create_mmap_data.cpp
tools/: CMakeLists.txt  edgelist2fg.cpp  fg2compressed.cpp  print_compressed.cpp
tools/codec/: CMakeLists.txt  codec.cpp
tools/codec/include/: codec.hpp
